# fulltextsearch_py_playground

./: .gitignore  01 - Full Text Search .ipynb
postgres_fts/: Untitled.ipynb  postgres_fts.ipynb  pyproject.toml
pure_python_fts/: README.md  pyproject.toml
