[tool.poetry]
name = "postgres-fts"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "postgres_fts"}]

[tool.poetry.dependencies]
python = "^3.11"
datasets = "^2.13.0"
jupyterlab = "^4.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
