[tool.poetry]
name = "fulltextsearch"
version = "0.1.0"
description = ""
authors = ["Sid Mitra <github@sidmitra.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
ipython = "^7.17.0"
ipdb = "^0.13.3"
spacy = "^2.3.2"
nltk = "^3.5"
jupyter = "^1.0.0"
tqdm = "^4.48.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
